优化工具代码，解决工具标识returndiract=true返回的数据无法保存的问题